<resources>
    <string name="app_name">PlanMate</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="enter_task_description">Enter Task Description</string>
    <string name="enter_task_title">Enter Task Title</string>
    <string name="add_task">Add Task</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="total_time">Total time spent:</string>
    <string name="reminder_title">Reminder Title</string>
    <string name="enter_reminder_title">Enter reminder title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="set_reminder_alarm">Set Reminder</string>
    <string name="add_task_2">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="no_tasks">No tasks</string>
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="start_timer">Start Timer</string>
    <string name="no_tasks_available">No tasks available</string>
    <string name="total_time_code">Total time spent: %1$s</string>
    <string name="stop_timer">Stop Timer</string>
    <string name="total_time_2">Total time spent: %1$s</string>
    <string name="hh_mm_ss">HH:MM:SS</string>
    <string name="due_date">Due Date:</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="stop_alarm">Stop Alarm</string>
</resources>