<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Task CardView -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="16dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/Light_mint">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"
            android:background="@color/soft_peach">
    <!-- Task Title -->
            <TextView
                android:id="@+id/taskTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

    <!-- Task Description -->
            <TextView
                android:id="@+id/taskDescriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:layout_marginBottom="8dp"/>

    <!-- Total Time Display -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/totalTimeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"/>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="24dp"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/Light_aqua">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            android:background="@color/soft_peach">

            <TextView
                android:id="@+id/dueDateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/due_date"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/dueDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

<!-- Timer Label -->
        <TextView
            android:id="@+id/timerLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.2"
            android:text="@string/hh_mm_ss"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

<!-- Timer Value -->
        <TextView
            android:id="@+id/timerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:text="@string/_00_00_00"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>

    <!-- Start/Stop Timer Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/startButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/Light_aqua"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="20dp"
        android:text="@string/start_timer"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:cornerRadius="20dp"
        app:icon="@drawable/ic_timer"
        app:iconPadding="8dp"
        app:iconTint="@color/black"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setReminderButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/Light_mint"
        android:elevation="4dp"
        android:fontFamily="sans-serif-medium"
        android:padding="20dp"
        android:textSize="16sp"
        android:text="@string/set_reminder"
        android:textColor="@color/black"
        app:cornerRadius="16dp"
        app:icon="@drawable/ic_reminder"
        app:iconPadding="8dp"
        app:iconTint="@color/black"/>

</LinearLayout>
